\Fix vercel.json rewrites: Exclude /api/* to prevent intercept (Vercel Invalid error fix) + v2.0 stable"

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,14 @@
 {
   \"version\": 2,
   \"functions\": {
-    \"api/*.js\": { \"runtime\": \"nodejs18.x\" }
+    \"api/*.js\": {
+      \"runtime\": \"nodejs18.x\"
+    }
   },
-  \"rewrites\": [{ \"source\": \"/(.*)\", \"destination\": \"/index.html\" }]
+  \"rewrites\": [
+    {
+      \"source\": \"/(?!api/.*).*\", 
+      \"destination\": \"/index.html\"
+    }
+  ]
 }
