--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
-  \"name\": \"json-pro-tool\",
-  \"version\": \"2.0.0\",
-  \"description\": \"Professional JSON SaaS Tool\",
-  \"scripts\": {
-    \"dev\": \"vercel dev\"
-  },
-  \"dependencies\": {
-    \"ajv\": \"^8.12.0\",
-    \"json-to-csv\": \"^2.0.6\",
-    \"jsonminify\": \"^0.2.2\"
-  }
+ "name": "json-pro-tool",
+ "scripts": {
+ "start": "npx serve . -s"
+}
 }
